[project]
name = "openbachelorm"
version = "0.1.0"
description = ""
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "unitypy @ git+https://github.com/pfyy/UnityPy.git@master",
    "python-dotenv (>=1.1.1,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "openbachelorm", from = "src" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.1"
pytest = "^8.4.2"
poethepoet = "^0.37.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
